--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
 # Extensions
 markdown_extensions:
   - footnotes
+  - mdx_math
   # - attr_list
   - pymdownx.arithmatex:
        generic: true
@@ -40,9 +41,8 @@ markdown_extensions:
       permalink: true
 
 extra_javascript:
-  - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+
 
 plugins:
   - search
