--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,6 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs-material
       - run: pip install mkdocs-roamlinks-plugin
+      - run: pip install mkdocs-callouts
+      - run: pip install python-markdown-math
       - run: mkdocs gh-deploy --force
