--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
       - run: pip install mkdocs-roamlinks-plugin
       - run: pip install mkdocs-callouts
       - run: pip install python-markdown-math
+      - run: pip install mkdocs-embed-file-plugins
       - run: mkdocs gh-deploy --force
